--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/src/assets/images/favicon.ico" /> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CarWorthy - Your online car price predictor</title>
+    <link rel="stylesheet" href="/src/assets/styles.css">
   </head>
   <body>
     <div id="root"></div>
